add cart right 2

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
-<div ui-view="header"></div>
-<div ui-view="content"></div>
-<div ui-view="footer"></div>
-<script src="/assets/js/libs.js"></script>
-<script src="/assets/js/app.js"></script>
+	<header ui-view="header"></header>
+	<div ui-view="content"></div>
+	<div ui-view="footer"></div>
+	<div ui-view="cart_right"></div>
+	<script src="/assets/js/libs.js"></script>
+	<script src="/assets/js/app.js"></script>
 </body>
 </html>
