add prototype slide

--- a/prototype/vnshop/index-interesting.html
+++ b/prototype/vnshop/index-interesting.html
@@ -21,14 +21,13 @@
 <header class="fixed-top border-bottom-1 bg-white">
     <div class="container">
         <div class="row py16 align-items-center">
-            <div class="col-1">
+            <div class="col-1 col-md-1">
                 <div class="nav-icon"><span class="icon-menu"></span></div>
             </div>
-            <div class="col-2">
+            <div class="col-3 col-md-2">
                 <img class="logo w-75" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-5 border-right-1">
-
+            <div class="col-6 col-md-5 border-right-1">
                 <div class="field">
                     <label for="field-search">
                         <span class="placeholder content">Tìm kiếm</span>
@@ -38,35 +37,37 @@
                         <span class="icon-Search"></span>
                     </div>
                 </div>
+            </div>
+            <div class="col-1 col-md-2 d-flex align-items-center">
+                <div class="nav-icon">
+                    <span class="icon-cart"></span>
+                </div>
+                <p class="content hidden-md-down">&nbsp;&nbsp;Giỏ hàng của tôi</p>
+            </div>
 
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-cart"></span><span class="content">&nbsp;&nbsp;Giỏ hàng của tôi</span>
+            <div class="col-1 col-md-2 d-flex align-items-center">
+                <div class="nav-icon d-flex align-items-center">
+                    <span class="icon-user"></span>
                 </div>
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-user"></span><span class="content">&nbsp;&nbsp;Đào Thái Hà</span>
-                </div>
+                <p class="content hidden-md-down">&nbsp;&nbsp;Đào Thái Hà</p>
             </div>
         </div>
     </div>
 </header>
 
 <main>
-    <div class="container py24">
+    <div class="container mt16 pb60">
         <div class="row">
-
             <div class="col-12 text-center">
-                <div class="content text-grey-more font-size-24">
+                <h2 class="content">
                     Bạn đang quan tâm đến điều gì?
-                </div>
+                </h2>
             </div>
-            <div class="col-12 text-center mt8">
-                <div class="content text-grey">
+            <div class="col-12 text-center">
+                <p class="content">
                     Hãy cập nhật sở thích của bạn để chúng tôi có thể cung cấp cho bạn những dịch vụ tốt nhất.
-                </div>
+                </p>
             </div>
-
         </div>
 
         <div class="row mt32">
@@ -74,62 +75,61 @@
                 <div class="box-group">
                     <div class="box-card">
                         <img class="w-100" src="img/interest-1.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
 
                     <div class="box-card">
                         <img class="w-100" src="img/interest-1.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
 
                     <div class="box-card">
                         <img class="w-100" src="img/interest-2.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
 
                     <div class="box-card">
                         <img class="w-100" src="img/interest-3.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
 
                     <div class="box-card">
                         <img class="w-100" src="img/interest-4.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
 
 
                     <div class="box-card">
                         <img class="w-100" src="img/interest-5.png" alt="">
-                        <div class="box-card-title content text-grey">
+                        <p class="content pxy8">
                             Du lịch
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
-
 
             <div class="col-4">
                 <div class="box-card-full">
                     <div class="box-img">
                         <img class="w-100" src="img/interest-0.png" alt="">
-                        <div class="content box-img-title">
+                        <p class="content box-img-title">
                             Ẩm thực
-                        </div>
+                        </p>
                     </div>
 
                     <div class="box-search">
                         <div class="flex-grow border-bottom-1">
-                            <input class="input-search-interest" placeholder="Tìm kiếm sở thích">
+                            <input class="content input-search-interest" placeholder="Tìm kiếm sở thích">
                         </div>
                     </div>
 
@@ -156,53 +156,46 @@
 <footer class="border-top-1">
     <div class="container py16">
         <div class="row py16 d-flex align-items-center">
-            <div class="col-3">
+            <div class="col-md-3">
                 <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Liên lạc
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Liên lạc</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Vnshop
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Vnshop</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Chăm sóc khách hàng
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
             </div>
         </div>
 
         <div class="row py16">
-            <div class="col-3">
-                <div class="content-footer">Công ty TNHH Vnshop</div>
-                <div class="content-footer mt8">Tầng 7 Hoàng Hòa Thám</div>
-                <div class="content-footer mt8">Thụy Khê Hà Nội</div>
+            <div class="col-md-3">
+                <p class="content text-uppercase">Công ty TNHH Vnshop</p>
+                <p class="content text-uppercase">Tầng 7 Hoàng Hòa Thám</p>
+                <p class="content text-uppercase">Thụy Khê Hà Nội</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
-                <div class="content-footer text-uppercase mt8"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
-                </div>
+            <div class="col-md-3">
+                <p class="content text-uppercase"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
+                <p class="content text-uppercase"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com</p>
             </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Giới thiệu</div>
-                <div class="content-footer mt8">Tuyển dụng</div>
-                <div class="content-footer mt8">Đối tác</div>
+            <div class="col-md-3">
+                <p class="content text-uppercase">Giới thiệu</p>
+                <p class="content text-uppercase">Tuyển dụng</p>
+                <p class="content text-uppercase">Đối tác</p>
             </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Hỏi đáp</div>
-                <div class="content-footer mt8">Chính sách đổi trả</div>
-                <div class="content-footer mt8">Điều khoản quy định</div>
-                <div class="content-footer mt8">Giao hàng</div>
-                <div class="content-footer mt8">Thuế</div>
+            <div class="col-md-3 text-uppercase">
+                <p class="content text-uppercase">Hỏi đáp</p>
+                <p class="content text-uppercase"> sách đổi trả</p>
+                <p class="content text-uppercase">Điều khoản quy định</p>
+                <p class="content text-uppercase">Giao hàng</p>
+                <p class="content text-uppercase">Thuế</p>
             </div>
         </div>
-
     </div>
 </footer>
+
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/tether.js"></script>
