--- a/prototype/vnshop/signin.html
+++ b/prototype/vnshop/signin.html
@@ -75,21 +75,40 @@
                     </div>
                 </div>
 
-                <div class="row mt8">
-                    <div class="col-6 d-flex justify-content-between">
+                <div class="row mt8 align-items-center">
+                    <div class="col-6 d-flex">
                         <div><input class="" type="radio" name="gender" value="male"> Nam</div>
-                        <div><input class="" type="radio" name="gender" value="female"> Nữ</div>
+                        <div class="ml16"><input class="" type="radio" name="gender" value="female"> Nữ</div>
                     </div>
-                    <div class="col-6 d-flex justify-content-between">
-                        <input class="" type="radio" name="gender" value="male"> Nam
-                        <input class="" type="radio" name="gender" value="female"> Nữ
+                    <div class="col-6">
+                        <div><input class="input-control" type="text"></div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-between mt16">
-                    <div class="text-blue">Đăng kí tài khoản mới</div>
-                    <div class="text-grey">Bạn quên mật khẩu</div>
+                <div class="row mt16">
+                    <div class="col-12 d-flex justify-content-between">
+                        <div>Mật khẩu:</div>
+                        <div class="text-blue">*Mật khẩu chứa ít nhất 6 ký tự bao gồm cả chữ và số</div>
+                    </div>
                 </div>
+
+                <input class="input-control mt8" type="password">
+
+                <div class="row mt16">
+                    <div class="col-12 d-flex justify-content-between">
+                        <div>Nhập lại mật khẩu:</div>
+                        <div class="text-red">*Mật khẩu không trùng khớp</div>
+                    </div>
+                </div>
+
+                <input class="input-control mt8" type="password">
+
+                <div class="row mt16">
+                    <div class="col-12">
+                        <input class="" type="checkbox"> Tôi đồng ý với những <a class="text-blue" href="">điều khoản</a> của VNSHOP
+                    </div>
+                </div>
+
                 <button class="button-normal-grey bg-blue w-100 mt32" type="button">Đăng nhập</button>
             </div>
 
