--- a/prototype/vnshop/cart.html
+++ b/prototype/vnshop/cart.html
@@ -21,14 +21,13 @@
 <header class="fixed-top border-bottom-1 bg-white">
     <div class="container">
         <div class="row py16 align-items-center">
-            <div class="col-1">
+            <div class="col-1 col-md-1">
                 <div class="nav-icon"><span class="icon-menu"></span></div>
             </div>
-            <div class="col-2">
+            <div class="col-3 col-md-2">
                 <img class="logo w-75" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-5 border-right-1">
-
+            <div class="col-6 col-md-5 border-right-1">
                 <div class="field">
                     <label for="field-search">
                         <span class="placeholder content">Tìm kiếm</span>
@@ -38,22 +37,26 @@
                         <span class="icon-Search"></span>
                     </div>
                 </div>
+            </div>
+            <div class="col-1 col-md-2 d-flex align-items-center">
+                <div class="nav-icon">
+                    <span class="icon-cart"></span>
+                </div>
+                <p class="content hidden-md-down">&nbsp;&nbsp;Giỏ hàng của tôi</p>
+            </div>
 
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-cart"></span><span class="content">&nbsp;&nbsp;Giỏ hàng của tôi</span>
+            <div class="col-1 col-md-2 d-flex align-items-center">
+                <div class="nav-icon d-flex align-items-center">
+                    <span class="icon-user"></span>
                 </div>
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-user"></span><span class="content">&nbsp;&nbsp;Đào Thái Hà</span>
-                </div>
+                <p class="content hidden-md-down">&nbsp;&nbsp;Đào Thái Hà</p>
             </div>
         </div>
     </div>
 </header>
 
 <main>
-    <div class="container py24">
+    <div class="container mt16 pb60">
         <div class="row">
             <ol class="breadcrumb content">
                 <li class="breadcrumb-item"><a href="#">VNSHOP</a></li>
@@ -61,156 +64,153 @@
             </ol>
         </div>
 
-        <div class="row mt16 content text-grey-more border-bottom-1 py8">
+        <div class="row mt16 border-bottom-1 py8">
             <div class="col-6">
-                <div class="">Sản phẩm</div>
+                <p class="content-bold">Sản phẩm</p>
             </div>
             <div class="col-2">
-                <div>Số lượng</div>
+                <p class="content-bold">Số lượng</p>
             </div>
             <div class="col-2">
-                <div>Giá</div>
+                <p class="content-bold">Giá</p>
             </div>
             <div class="col-2 text-right">
-                <div>Tổng giá</div>
+                <p class="content-bold">Tổng giá</p>
             </div>
         </div>
 
         <div class="row mt16">
-            <section class="cart-product-group content text-grey">
+            <section class="cart-product-group">
                 <div class="cart-product-item py16">
                     <div class="col-2">
                         <img class="w-100" src="img/cart-1.png" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="text-uppercase">HAPPY FARM</div>
-                        <div class="font-size-14 mt16">Rau củ tổng hợp</div>
-                        <div class="font-size-12 mt16">Combo: 02</div>
-                        <div class="font-size-12">Size: XL</div>
+                        <p class="content text-uppercase">HAPPY FARM</p>
+                        <p class="content mt16">Rau củ tổng hợp</p>
+                        <p class="content font-size-12 mt16">Combo: 02</p>
+                        <p class="content font-size-12">Size: XL</p>
                     </div>
                     <div class="col-2 d-flex">
-                        <div class="cart-product-amount text-center">1</div>
-                        <div class="line-height-32 font-size-14 ml8">Xóa sản phẩm</div>
+                        <p class="content cart-product-amount text-center">1</p>
+                        <p class="content line-height-32 ml8">Xóa sản phẩm</p>
                     </div>
                     <div class="col-2">
-                        <div class="cart-product-amount-price">180.000 VND</div>
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
                     </div>
                     <div class="col-2 text-right">
-                        <div class="cart-product-amount-price">180.000 VND</div>
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                </div>
+                <div class="cart-product-item py16">
+                    <div class="col-2">
+                        <img class="w-100" src="img/cart-1.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <p class="content text-uppercase">HAPPY FARM</p>
+                        <p class="content mt16">Rau củ tổng hợp</p>
+                        <p class="content font-size-12 mt16">Combo: 02</p>
+                        <p class="content font-size-12">Size: XL</p>
+                    </div>
+                    <div class="col-2 d-flex">
+                        <p class="content cart-product-amount text-center">1</p>
+                        <p class="content line-height-32 ml8">Xóa sản phẩm</p>
+                    </div>
+                    <div class="col-2">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                    <div class="col-2 text-right">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                </div>
+                <div class="cart-product-item py16">
+                    <div class="col-2">
+                        <img class="w-100" src="img/cart-1.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <p class="content text-uppercase">HAPPY FARM</p>
+                        <p class="content mt16">Rau củ tổng hợp</p>
+                        <p class="content font-size-12 mt16">Combo: 02</p>
+                        <p class="content font-size-12">Size: XL</p>
+                    </div>
+                    <div class="col-2 d-flex">
+                        <p class="content cart-product-amount text-center">1</p>
+                        <p class="content line-height-32 ml8">Xóa sản phẩm</p>
+                    </div>
+                    <div class="col-2">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                    <div class="col-2 text-right">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                </div>
+                <div class="cart-product-item py16">
+                    <div class="col-2">
+                        <img class="w-100" src="img/cart-1.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <p class="content text-uppercase">HAPPY FARM</p>
+                        <p class="content mt16">Rau củ tổng hợp</p>
+                        <p class="content font-size-12 mt16">Combo: 02</p>
+                        <p class="content font-size-12">Size: XL</p>
+                    </div>
+                    <div class="col-2 d-flex">
+                        <p class="content cart-product-amount text-center">1</p>
+                        <p class="content line-height-32 ml8">Xóa sản phẩm</p>
+                    </div>
+                    <div class="col-2">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
+                    </div>
+                    <div class="col-2 text-right">
+                        <p class="content cart-product-amount-price font-size-18">180.000 VND</p>
                     </div>
                 </div>
 
-                <div class="cart-product-item py16">
-                    <div class="col-2">
-                        <img class="w-100" src="img/cart-1.png" alt="">
-                    </div>
-                    <div class="col-4">
-                        <div class="text-uppercase">HAPPY FARM</div>
-                        <div class="font-size-14 mt16">Rau củ tổng hợp</div>
-                        <div class="font-size-12 mt16">Combo: 02</div>
-                        <div class="font-size-12">Size: XL</div>
-                    </div>
-                    <div class="col-2 d-flex">
-                        <div class="cart-product-amount text-center">1</div>
-                        <div class="line-height-32 font-size-14 ml8">Xóa sản phẩm</div>
-                    </div>
-                    <div class="col-2">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                    <div class="col-2 text-right">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                </div>
 
-                <div class="cart-product-item py16">
-                    <div class="col-2">
-                        <img class="w-100" src="img/cart-1.png" alt="">
-                    </div>
-                    <div class="col-4">
-                        <div class="text-uppercase">HAPPY FARM</div>
-                        <div class="font-size-14 mt16">Rau củ tổng hợp</div>
-                        <div class="font-size-12 mt16">Combo: 02</div>
-                        <div class="font-size-12">Size: XL</div>
-                    </div>
-                    <div class="col-2 d-flex">
-                        <div class="cart-product-amount text-center">1</div>
-                        <div class="line-height-32 font-size-14 ml8">Xóa sản phẩm</div>
-                    </div>
-                    <div class="col-2">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                    <div class="col-2 text-right">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                </div>
-
-                <div class="cart-product-item py16">
-                    <div class="col-2">
-                        <img class="w-100" src="img/cart-1.png" alt="">
-                    </div>
-                    <div class="col-4">
-                        <div class="text-uppercase">HAPPY FARM</div>
-                        <div class="font-size-14 mt16">Rau củ tổng hợp</div>
-                        <div class="font-size-12 mt16">Combo: 02</div>
-                        <div class="font-size-12">Size: XL</div>
-                    </div>
-                    <div class="col-2 d-flex">
-                        <div class="cart-product-amount text-center">1</div>
-                        <div class="line-height-32 font-size-14 ml8">Xóa sản phẩm</div>
-                    </div>
-                    <div class="col-2">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                    <div class="col-2 text-right">
-                        <div class="cart-product-amount-price">180.000 VND</div>
-                    </div>
-                </div>
             </section>
         </div>
 
 
-        <div class="row py16 border-top-1 content text-grey">
-            <div class="col-6 font-size-14">
-                <div>* Đơn hàng của bạn được <a class="text-blue text-uppercase" href="">MIỄN PHÍ VẬN CHUYỂN</a></div>
-                <div class="mt16">* Đơn hàng của bạn còn thiếu 200,000 VND thì sẽ được MIỄN PHÍ VẬN CHUYỂN!</div>
-                <div>&nbsp;&nbsp;<a class="text-red" href="#">Tiếp tục mua sắm ></a></div>
+        <div class="row py16 border-top-1">
+            <div class="col-6">
+                <p class="content">* Đơn hàng của bạn được <a class="text-blue text-uppercase" href="">MIỄN PHÍ VẬN CHUYỂN</a></p>
+                <p class="content mt16">* Đơn hàng của bạn còn thiếu 200,000 VND thì sẽ được MIỄN PHÍ VẬN CHUYỂN!</p>
+                <div class="content"><a class="text-red" href="#">Tiếp tục mua sắm ></a></div>
 
                 <textarea class="form-control mt32" type="text" placeholder="Chú thích đơn hàng" rows="5"></textarea>
 
-                <div class="text-grey-more text-uppercase font-size-18 mt16">Mã khuyến mãi</div>
+                <h3 class="content text-uppercase mt16">Mã khuyến mãi</h3>
 
                 <div class="row py8">
                     <div class="col-9">
-                        <input class="input-control" type="text">
+                        <input class="content input-control" type="text">
                     </div>
                     <div class="col-3">
-                        <button class="button-normal-grey-small w-100">Nhập mã</button>
+                        <button class="content button-normal-grey-small w-100">Nhập mã</button>
                     </div>
                 </div>
             </div>
 
             <div class="col-4 offset-2">
                 <div class="d-flex justify-content-between">
-                    <div class="">Giá tạm tính</div>
-                    <div class="">1.300.000 VND</div>
+                    <p class="content">Giá tạm tính</p>
+                    <p class="content">1.300.000 VND</p>
                 </div>
-                <div class="d-flex justify-content-between mt8">
-                    <div class="">Vận chuyển</div>
-                    <div class="">1.300.000 VND</div>
+                <div class="d-flex justify-content-between">
+                    <p class="content">Vận chuyển</p>
+                    <p class="content">1.300.000 VND</p>
                 </div>
-                <div class="d-flex justify-content-between mt8">
-                    <div class="">Giảm giá</div>
-                    <div class="">0</div>
+                <div class="d-flex justify-content-between">
+                    <p class="content">Giảm giá</p>
+                    <p class="content text-red">0</p>
                 </div>
 
                 <div class="d-flex justify-content-between mt32 border-top-1 py8">
-                    <div class="text-uppercase">Tổng giá</div>
-                    <div class="">0</div>
+                    <p class="content text-uppercase">Tổng giá</p>
+                    <p class="content">0</p>
                 </div>
 
-                <button class="button-normal-grey mt32 w-100">Thanh toán</button>
-
-
+                <button class="button-normal-grey mt32 content w-100">Thanh toán</button>
             </div>
         </div>
 
@@ -221,53 +221,46 @@
 <footer class="border-top-1">
     <div class="container py16">
         <div class="row py16 d-flex align-items-center">
-            <div class="col-3">
+            <div class="col-md-3">
                 <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Liên lạc
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Liên lạc</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Vnshop
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Vnshop</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Chăm sóc khách hàng
-                </div>
+            <div class="col-md-3">
+                <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
             </div>
         </div>
 
         <div class="row py16">
-            <div class="col-3">
-                <div class="content-footer">Công ty TNHH Vnshop</div>
-                <div class="content-footer mt8">Tầng 7 Hoàng Hòa Thám</div>
-                <div class="content-footer mt8">Thụy Khê Hà Nội</div>
+            <div class="col-md-3">
+                <p class="content text-uppercase">Công ty TNHH Vnshop</p>
+                <p class="content text-uppercase">Tầng 7 Hoàng Hòa Thám</p>
+                <p class="content text-uppercase">Thụy Khê Hà Nội</p>
             </div>
-            <div class="col-3">
-                <div class="content-footer"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
-                <div class="content-footer text-uppercase mt8"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
-                </div>
+            <div class="col-md-3">
+                <p class="content text-uppercase"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
+                <p class="content text-uppercase"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com</p>
             </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Giới thiệu</div>
-                <div class="content-footer mt8">Tuyển dụng</div>
-                <div class="content-footer mt8">Đối tác</div>
+            <div class="col-md-3">
+                <p class="content text-uppercase">Giới thiệu</p>
+                <p class="content text-uppercase">Tuyển dụng</p>
+                <p class="content text-uppercase">Đối tác</p>
             </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Hỏi đáp</div>
-                <div class="content-footer mt8">Chính sách đổi trả</div>
-                <div class="content-footer mt8">Điều khoản quy định</div>
-                <div class="content-footer mt8">Giao hàng</div>
-                <div class="content-footer mt8">Thuế</div>
+            <div class="col-md-3 text-uppercase">
+                <p class="content text-uppercase">Hỏi đáp</p>
+                <p class="content text-uppercase"> sách đổi trả</p>
+                <p class="content text-uppercase">Điều khoản quy định</p>
+                <p class="content text-uppercase">Giao hàng</p>
+                <p class="content text-uppercase">Thuế</p>
             </div>
         </div>
-
     </div>
 </footer>
+
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/tether.js"></script>
