code cart right in product detail, code cart page

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 <body>
 	<header ui-view="header"></header>
 	<div ui-view="content"></div>
+    <div ui-view="cart_right"></div>
 	<div ui-view="footer"></div>
-<!-- 	<div ui-view="cart_right"></div> -->
 	<script src="/assets/js/libs.js"></script>
 	<script src="/assets/js/app.js"></script>
 </body>
